@@ -7,48 +7,16 @@
  */
 package org.roda_project.commons_ip2.model.impl.eark;
 
-import java.io.BufferedOutputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.security.NoSuchAlgorithmException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
-import javax.xml.datatype.DatatypeConfigurationException;
-import javax.xml.parsers.ParserConfigurationException;
-
 import org.hamcrest.core.Is;
-import org.junit.AfterClass;
 import org.junit.Assert;
-import org.junit.BeforeClass;
 import org.junit.Test;
 import org.roda_project.commons_ip.model.ParseException;
 import org.roda_project.commons_ip.utils.IPEnums;
 import org.roda_project.commons_ip.utils.IPException;
 import org.roda_project.commons_ip.utils.METSEnums.CreatorType;
 import org.roda_project.commons_ip2.mets_v1_12.beans.FileType;
-import org.roda_project.commons_ip2.model.IPAgent;
-import org.roda_project.commons_ip2.model.IPAgentNoteTypeEnum;
-import org.roda_project.commons_ip2.model.IPConstants;
-import org.roda_project.commons_ip2.model.IPContentInformationType;
-import org.roda_project.commons_ip2.model.IPContentType;
-import org.roda_project.commons_ip2.model.IPDescriptiveMetadata;
-import org.roda_project.commons_ip2.model.IPFile;
-import org.roda_project.commons_ip2.model.IPFileInterface;
-import org.roda_project.commons_ip2.model.IPFileShallow;
-import org.roda_project.commons_ip2.model.IPMetadata;
-import org.roda_project.commons_ip2.model.IPRepresentation;
-import org.roda_project.commons_ip2.model.MetadataType;
+import org.roda_project.commons_ip2.model.*;
 import org.roda_project.commons_ip2.model.MetadataType.MetadataTypeEnum;
-import org.roda_project.commons_ip2.model.RepresentationStatus;
-import org.roda_project.commons_ip2.model.SIP;
 import org.roda_project.commons_ip2.model.ValidationEntry.LEVEL;
 import org.roda_project.commons_ip2.utils.Utils;
 import org.roda_project.commons_ip2.validator.EARKSIPValidator;
@@ -58,6 +26,23 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.SAXException;
 
+import javax.xml.datatype.DatatypeConfigurationException;
+import javax.xml.parsers.ParserConfigurationException;
+import java.io.*;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
+
+import static org.roda_project.commons_ip.model.IPConstants.CHECKSUM_MD5_ALGORITHM;
+
 /**
  * Unit tests for EARK Information Packages (SIP, AIP and DIP)
  */
@@ -66,115 +51,129 @@ public class EARKSIPTest {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(EARKSIPTest.class);
 
-  private static Path tempFolder;
-
-  @BeforeClass
-  public static void setup() throws IOException {
-    tempFolder = Files.createTempDirectory("temp");
-  }
-
-  @AfterClass
-  public static void cleanup() throws Exception {
-    Utils.deletePath(tempFolder);
-  }
-
   @Test
-  public void buildParseAndValidateEARKSIP() throws IPException, ParseException, InterruptedException, IOException,
-    ParserConfigurationException, SAXException, NoSuchAlgorithmException {
-    LOGGER.info("Creating full E-ARK SIP");
-    Path zipSIP = createFullEARKSIP_For_Test_Compliance();
-    LOGGER.info("Done creating full E-ARK SIP");
-    LOGGER.info("Parsing (and validating) full E-ARK SIP");
-    parseAndValidateFullEARKSIP(zipSIP);
-
-    Path reportPath = Files.createTempDirectory("reports").resolve("Full-EARK-SIP.json");
-    if (!reportPath.toFile().exists()) {
-      try {
-        Files.createFile(reportPath);
-      } catch (IOException e) {
-        reportPath = Files.createTempFile(Constants.VALIDATION_REPORT_PREFIX, ".json");
-      }
-    } else {
-      Files.deleteIfExists(reportPath);
-      try {
-        Files.createFile(reportPath);
-      } catch (IOException e) {
-        reportPath = Files.createTempFile(Constants.VALIDATION_REPORT_PREFIX, ".json");
-      }
+  public void test_buildParseAndValidateEARKSIP_Zipped() throws IPException, ParseException, IOException, ParserConfigurationException, NoSuchAlgorithmException, InterruptedException, SAXException {
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      buildParseAndValidateEARKSIP(true, false, tempFolder);
     }
-    OutputStream outputStream = new BufferedOutputStream(new FileOutputStream(reportPath.toFile()));
-    ValidationReportOutputJson reportOutputJson = new ValidationReportOutputJson(zipSIP, outputStream);
-    EARKSIPValidator earksipValidator = new EARKSIPValidator(reportOutputJson, "2.1.0");
-    boolean validate = earksipValidator.validate("2.1.0");
-    LOGGER.info("Done parsing (and validating) full E-ARK SIP");
-    Assert.assertTrue(validate);
+    finally {
+      Utils.deletePath(tempFolder);
+    }
   }
 
   @Test
-  public void buildAndParseEARKSIP() throws IPException, ParseException, InterruptedException {
-    LOGGER.info("Creating full E-ARK SIP");
-    Path zipSIP = createFullEARKSIP();
-    LOGGER.info("Done creating full E-ARK SIP");
+  public void test_buildParseAndValidateEARKSIP_Zipped_WithPregeneratedChecksums() throws IPException, ParseException, IOException, ParserConfigurationException, NoSuchAlgorithmException, InterruptedException, SAXException {
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      buildParseAndValidateEARKSIP(true, true, tempFolder);
+    }
+    finally {
+      Utils.deletePath(tempFolder);
+    }
+  }
 
-    LOGGER.info("Parsing (and validating) full E-ARK SIP");
-    parseAndValidateFullEARKSIP(zipSIP);
-    LOGGER.info("Done parsing (and validating) full E-ARK SIP");
+  @Test
+  public void test_buildParseAndValidateEARKSIP_Unzipped() throws IPException, ParseException, IOException, ParserConfigurationException, NoSuchAlgorithmException, InterruptedException, SAXException {
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      buildParseAndValidateEARKSIP(false, false, tempFolder);
+    }
+    finally {
+      Utils.deletePath(tempFolder);
+    }
+  }
 
+  @Test
+  public void test_buildParseAndValidateEARKSIP_Unzipped_WithExistingChecksum() throws IPException, ParseException, IOException, ParserConfigurationException, NoSuchAlgorithmException, InterruptedException, SAXException {
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      buildParseAndValidateEARKSIP(false, true, tempFolder);
+    }
+    finally {
+      Utils.deletePath(tempFolder);
+    }
+  }
+
+  @Test
+  public void buildAndParseEARKSIP() throws IPException, ParseException, InterruptedException, IOException, NoSuchAlgorithmException {
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      Path zipSIP = createFullEARKSIP(true, false, false, tempFolder);
+      parseAndValidateFullEARKSIP(zipSIP, true, tempFolder);
+    }
+    finally {
+      Utils.deletePath(tempFolder);
+    }
   }
 
   @Test
   public void buildEARKSIPShallow()
-    throws IPException, InterruptedException, DatatypeConfigurationException, ParseException, URISyntaxException {
-    LOGGER.info("Creating full E-ARK SIP-S");
-    Path zipSIPS = createFullEARKSIPS();
-    LOGGER.info("Done creating full E-ARK SIP-S");
-
-    LOGGER.info("Parsing (and validating) full E-ARK SIP");
-    // parseAndValidateFullEARKSIPS(zipSIPS);
-    LOGGER.info("Done parsing (and validating) full E-ARK SIP");
+          throws IPException, InterruptedException, DatatypeConfigurationException, ParseException, URISyntaxException, IOException, NoSuchAlgorithmException {
+    // TODO: parseAndValidateFullEARKSIPS(zipSIPS); ?
+    Path tempFolder = Files.createTempDirectory("temp" + UUID.randomUUID());
+    try {
+      createFullEARKSIPS(false, tempFolder);
+    }
+    finally {
+      Utils.deletePath(tempFolder);
+    }
   }
 
-  private Path createFullEARKSIPS()
-    throws IPException, InterruptedException, DatatypeConfigurationException, URISyntaxException {
+  private void buildParseAndValidateEARKSIP(boolean zipIt, boolean hasPregeneratedChecksums, Path tempFolder) throws IPException, ParseException, InterruptedException, IOException,
+          ParserConfigurationException, SAXException, NoSuchAlgorithmException {
+
+    Path sipPath = createFullEARKSIP(zipIt, true, hasPregeneratedChecksums, tempFolder);
+
+    parseAndValidateFullEARKSIP(sipPath, zipIt, tempFolder);
+
+    Path reportPath = Files.createTempDirectory("reports").resolve("Full-EARK-SIP.json");
+    Files.deleteIfExists(reportPath);
+    try {
+      Files.createFile(reportPath);
+    } catch (IOException e) {
+      reportPath = Files.createTempFile(Constants.VALIDATION_REPORT_PREFIX, ".json");
+    }
+
+    OutputStream outputStream = new BufferedOutputStream(new FileOutputStream(reportPath.toFile()));
+    ValidationReportOutputJson reportOutputJson = new ValidationReportOutputJson(sipPath, outputStream);
+    EARKSIPValidator earksipValidator = new EARKSIPValidator(reportOutputJson, "2.1.0");
+    boolean validate = earksipValidator.validate("2.1.0");
+
+    LOGGER.info("Done parsing (and validating) full E-ARK SIP");
+    Assert.assertTrue(validate);
+  }
+
+  private Path createFullEARKSIPS(boolean hasPregeneratedChecksums, Path tempFolder)
+          throws IPException, InterruptedException, DatatypeConfigurationException, URISyntaxException, IOException, NoSuchAlgorithmException {
     // 1) instantiate E-ARK SIP object
     SIP sip = new EARKSIP("SIP_S_1", IPContentType.getMIXED(), IPContentInformationType.getMIXED(), "2.1.0");
+    sip.setChecksumAlgorithm(CHECKSUM_MD5_ALGORITHM);
+    sip.setHasPregeneratedChecksums(hasPregeneratedChecksums);
+
     sip.addCreatorSoftwareAgent("RODA Commons IP", "2.0.0");
 
     // 1.1) set optional human-readable description
     sip.setDescription("A full E-ARK SIP-S");
 
     // 1.2) add descriptive metadata (SIP level)
-    IPDescriptiveMetadata metadataDescriptiveDC = new IPDescriptiveMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_descriptive_dc.xml")),
-      new MetadataType(MetadataTypeEnum.DC), null);
-    sip.addDescriptiveMetadata(metadataDescriptiveDC);
+    addDescriptiveMetadata(sip, "src/test/resources/eark", "metadata_descriptive_dc.xml", hasPregeneratedChecksums);
 
     // 1.3) add preservation metadata (SIP level)
-    IPMetadata metadataPreservation = new IPMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_preservation_premis.xml")))
-        .setMetadataType(MetadataTypeEnum.PREMIS);
-    sip.addPreservationMetadata(metadataPreservation);
+    addPreservationMetadata(sip,"src/test/resources/eark", "metadata_preservation_premis.xml", hasPregeneratedChecksums);
 
     // 1.4) add other metadata (SIP level)
-    IPFile metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed.txt");
-    IPMetadata metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
-    metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed2.txt");
-    metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
+    addOtherMetadata(sip,"src/test/resources/eark", "metadata_other.txt", "metadata_other_renamed.txt", hasPregeneratedChecksums);
+    addOtherMetadata(sip,"src/test/resources/eark", "metadata_other.txt","metadata_other_renamed2.txt", hasPregeneratedChecksums);
 
     // 1.5) add xml schema (SIP level)
-    sip.addSchema(new IPFile(Paths.get("src/test/resources/eark/schema.xsd")));
+    addSchema(sip,"src/test/resources/eark", "schema.xsd", hasPregeneratedChecksums);
 
     // 1.6) add documentation (SIP level)
-    sip.addDocumentation(new IPFile(Paths.get("src/test/resources/eark/documentation.pdf")));
+    addDocumentation(sip,"src/test/resources/eark", "documentation.pdf", hasPregeneratedChecksums);
 
     // 1.7) set optional RODA related information about ancestors
-    sip.setAncestors(Arrays.asList("b6f24059-8973-4582-932d-eb0b2cb48f28"));
+    sip.setAncestors(List.of("b6f24059-8973-4582-932d-eb0b2cb48f28"));
 
     // 1.8) add an agent (SIP level)
     IPAgent agent = new IPAgent("Agent Name", "OTHER", "OTHER ROLE", CreatorType.INDIVIDUAL, "OTHER TYPE", "",
@@ -246,138 +245,13 @@ public class EARKSIPTest {
     return zipSIP;
   }
 
-  private Path createFullEARKSIP() throws IPException, InterruptedException {
-
-    // 1) instantiate E-ARK SIP object
-    SIP sip = new EARKSIP("SIP_1", IPContentType.getMIXED(), IPContentInformationType.getMIXED(), "2.1.0");
-    sip.addCreatorSoftwareAgent("RODA Commons IP", "2.0.0");
-
-    // 1.1) set optional human-readable description
-    sip.setDescription("A full E-ARK SIP");
-
-    // 1.2) add descriptive metadata (SIP level)
-    IPDescriptiveMetadata metadataDescriptiveDC = new IPDescriptiveMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_descriptive_dc.xml")),
-      new MetadataType(MetadataTypeEnum.DC), null);
-    sip.addDescriptiveMetadata(metadataDescriptiveDC);
-
-    // 1.3) add preservation metadata (SIP level)
-    IPMetadata metadataPreservation = new IPMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_preservation_premis.xml")))
-        .setMetadataType(MetadataTypeEnum.PREMIS);
-    sip.addPreservationMetadata(metadataPreservation);
-
-    // 1.4) add other metadata (SIP level)
-    IPFile metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed.txt");
-    IPMetadata metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
-    metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed2.txt");
-    metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
-
-    // 1.5) add xml schema (SIP level)
-    sip.addSchema(new IPFile(Paths.get("src/test/resources/eark/schema.xsd")));
-
-    // 1.6) add documentation (SIP level)
-    sip.addDocumentation(new IPFile(Paths.get("src/test/resources/eark/documentation.pdf")));
-
-    // 1.7) set optional RODA related information about ancestors
-    sip.setAncestors(Arrays.asList("b6f24059-8973-4582-932d-eb0b2cb48f28"));
-
-    // 1.8) add an agent (SIP level)
-    IPAgent agent = new IPAgent("Agent Name", "OTHER", "OTHER ROLE", CreatorType.INDIVIDUAL, "OTHER TYPE", "",
-      IPAgentNoteTypeEnum.SOFTWARE_VERSION);
-    sip.addAgent(agent);
-
-    // 1.9) add a representation (status will be set to the default value, i.e.,
-    // ORIGINAL)
-    IPRepresentation representation1 = new IPRepresentation("representation 1");
-    sip.addRepresentation(representation1);
-
-    // 1.9.1) add a file to the representation
-    IPFile representationFile = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile.setRenameTo("data_.pdf");
-    representation1.addFile(representationFile);
-
-    // SIDE TEST: encoding
-    if (!Utils.systemIsWindows()) {
-      IPFile representationFileEnc1 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-      representationFileEnc1.setRenameTo("enc1_\u0001\u001F.pdf");
-      representation1.addFile(representationFileEnc1);
-    }
-
-    IPFile representationFileEnc2 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc2.setRenameTo("enc2_\u0080\u0081\u0090\u00FF.pdf");
-    representation1.addFile(representationFileEnc2);
-
-    IPFile representationFileEnc3 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc3.setRenameTo(Utils.systemIsWindows() ? "enc3_;@=&.pdf" : "enc3_;?:@=&.pdf");
-    representation1.addFile(representationFileEnc3);
-
-    IPFile representationFileEnc4 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc4
-      .setRenameTo(Utils.systemIsWindows() ? "enc4_#%{}\\^~[ ]`.pdf" : "enc4_\"<>#%{}|\\^~[ ]`.pdf");
-    representation1.addFile(representationFileEnc4);
-
-    IPFile representationFileEnc5 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc5
-      .setRenameTo(Utils.systemIsWindows() ? "enc4_#+%{}\\^~[ ]`.pdf" : "enc4_\"<>+#%{}|\\^~[ ]`.pdf");
-    representation1.addFile(representationFileEnc5);
-
-    // 1.9.2) add a file to the representation and put it inside a folder
-    // called 'abc' which has a folder inside called 'def'
-    IPFile representationFile2 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile2.setRelativeFolders(Arrays.asList("abc", "def"));
-    representation1.addFile(representationFile2);
-
-    // 1.10) add a representation & define its status
-    IPRepresentation representation2 = new IPRepresentation("representation 2");
-    representation2.setStatus(new RepresentationStatus(REPRESENTATION_STATUS_NORMALIZED));
-    sip.addRepresentation(representation2);
-
-    // 1.10.1) add a file to the representation
-    IPFile representationFile3 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile3.setRenameTo("data3.pdf");
-    representation2.addFile(representationFile3);
-
-    // 2) build SIP, providing an output directory
-    Path zipSIP = sip.build(tempFolder);
-
-    return zipSIP;
-  }
-
-  private void parseAndValidateFullEARKSIPS(Path zipSIPS) throws ParseException {
-    EARKSIP earksip = new EARKSIP();
-    // 1) invoke static method parse and that's it
-    SIP earkSIP = earksip.parse(zipSIPS, tempFolder);
-
-    // general assessment
-    earkSIP.getValidationReport().getValidationEntries().stream().filter(e -> e.getLevel() == LEVEL.ERROR)
-      .forEach(e -> LOGGER.error("Validation report entry: {}", e));
-    Assert.assertTrue(earkSIP.getValidationReport().isValid());
-
-    // assess # of representations
-    List<IPRepresentation> representations = earkSIP.getRepresentations();
-    Assert.assertThat(representations.size(), Is.is(1));
-
-    // assess representations status
-    Assert.assertThat(representations.get(0).getStatus().asString(),
-      Is.is(RepresentationStatus.getORIGINAL().asString()));
-
-    LOGGER.info("SIP with id '{}' parsed with success (valid? {})!", earkSIP.getId(),
-      earkSIP.getValidationReport().isValid());
-  }
-
-  private void parseAndValidateFullEARKSIP(Path zipSIP) throws ParseException {
+  private void parseAndValidateFullEARKSIP(Path sipPath, boolean isZipped, Path tempFolder) throws ParseException {
+    LOGGER.info("Parsing (and validating) full E-ARK SIP");
 
     EARKSIP earksip = new EARKSIP();
 
     // 1) invoke static method parse and that's it
-    SIP earkSIP = earksip.parse(zipSIP, tempFolder);
+    SIP earkSIP = isZipped ? earksip.parse(sipPath, tempFolder) : earksip.parseUnzipped(sipPath);
 
     // general assessment
     earkSIP.getValidationReport().getValidationEntries().stream().filter(e -> e.getLevel() == LEVEL.ERROR)
@@ -397,52 +271,49 @@ public class EARKSIPTest {
       earkSIP.getValidationReport().isValid());
   }
 
-  private Path createFullEARKSIP_For_Test_Compliance() throws IPException, InterruptedException {
+  private Path createFullEARKSIP(boolean zipIt, boolean isTestCompilation, boolean hasPregeneratedChecksums, Path tempFolder) throws IPException, InterruptedException, IOException, NoSuchAlgorithmException {
+    LOGGER.info("Creating full E-ARK SIP");
 
     // 1) instantiate E-ARK SIP object
-    SIP sip = new EARKSIP("SIP_1", IPContentType.getMIXED(), IPContentInformationType.getMIXED(), "2.1.0");
+    SIP sip = new EARKSIP("SIP_" + UUID.randomUUID(), IPContentType.getMIXED(), IPContentInformationType.getMIXED(), "2.1.0");
     sip.addCreatorSoftwareAgent("RODA Commons IP", "2.0.0");
+    sip.setShouldOutputInZip(zipIt);
+    sip.setChecksumAlgorithm(CHECKSUM_MD5_ALGORITHM);
+    sip.setHasPregeneratedChecksums(hasPregeneratedChecksums);
 
     // 1.1) set optional human-readable description
     sip.setDescription("A full E-ARK SIP");
 
     // 1.2) add descriptive metadata (SIP level)
-    IPDescriptiveMetadata metadataDescriptiveDC = new IPDescriptiveMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_descriptive_dc.xml")),
-      new MetadataType(MetadataTypeEnum.DC), null);
-    sip.addDescriptiveMetadata(metadataDescriptiveDC);
+    addDescriptiveMetadata(sip,"src/test/resources/eark", "metadata_descriptive_dc.xml", hasPregeneratedChecksums);
 
     // 1.3) add preservation metadata (SIP level)
-    IPMetadata metadataPreservation = new IPMetadata(
-      new IPFile(Paths.get("src/test/resources/eark/metadata_preservation_premis.xml")))
-        .setMetadataType(MetadataTypeEnum.PREMIS);
-    sip.addPreservationMetadata(metadataPreservation);
+    addPreservationMetadata(sip, "src/test/resources/eark", "metadata_preservation_premis.xml", hasPregeneratedChecksums);
 
     // 1.4) add other metadata (SIP level)
-    IPFile metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed.txt");
-    IPMetadata metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
-    metadataOtherFile = new IPFile(Paths.get("src/test/resources/eark/metadata_other.txt"));
-    // 1.4.1) optionally one may rename file final name
-    metadataOtherFile.setRenameTo("metadata_other_renamed2.txt");
-    metadataOther = new IPMetadata(metadataOtherFile);
-    sip.addOtherMetadata(metadataOther);
+    addOtherMetadata(sip, "src/test/resources/eark", "metadata_other.txt", "metadata_other_renamed.txt", hasPregeneratedChecksums);
+    addOtherMetadata(sip, "src/test/resources/eark", "metadata_other.txt","metadata_other_renamed2.txt", hasPregeneratedChecksums);
 
     // 1.5) add xml schema (SIP level)
-    sip.addSchema(new IPFile(Paths.get("src/test/resources/eark/schema.xsd")));
+    addSchema(sip,"src/test/resources/eark", "schema.xsd", hasPregeneratedChecksums);
 
     // 1.6) add documentation (SIP level)
-    sip.addDocumentation(new IPFile(Paths.get("src/test/resources/eark/documentation.pdf")));
+    addDocumentation(sip, "src/test/resources/eark", "documentation.pdf", hasPregeneratedChecksums);
 
     // 1.7) set optional RODA related information about ancestors
-    sip.setAncestors(Arrays.asList("b6f24059-8973-4582-932d-eb0b2cb48f28"));
+    sip.setAncestors(List.of("b6f24059-8973-4582-932d-eb0b2cb48f28"));
 
     // 1.8) add an agent (SIP level)
-    IPAgent agent = new IPAgent("Agent Name", "CREATOR", "", CreatorType.INDIVIDUAL, "OTHER TYPE", "",
-      IPAgentNoteTypeEnum.IDENTIFICATIONCODE);
-    sip.addAgent(agent);
+    if(isTestCompilation){
+      IPAgent agent = new IPAgent("Agent Name", "CREATOR", "", CreatorType.INDIVIDUAL, "OTHER TYPE", "",
+              IPAgentNoteTypeEnum.IDENTIFICATIONCODE);
+      sip.addAgent(agent);
+    }
+    else{
+      IPAgent agent = new IPAgent("Agent Name", "OTHER", "OTHER ROLE", CreatorType.INDIVIDUAL, "OTHER TYPE", "",
+              IPAgentNoteTypeEnum.SOFTWARE_VERSION);
+      sip.addAgent(agent);
+    }
 
     // 1.9) add a representation (status will be set to the default value, i.e.,
     // ORIGINAL)
@@ -450,40 +321,21 @@ public class EARKSIPTest {
     sip.addRepresentation(representation1);
 
     // 1.9.1) add a file to the representation
-    IPFile representationFile = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile.setRenameTo("data_.pdf");
-    representation1.addFile(representationFile);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", "data_.pdf", representation1, null, hasPregeneratedChecksums);
 
     // SIDE TEST: encoding
     if (!Utils.systemIsWindows()) {
-      IPFile representationFileEnc1 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-      representationFileEnc1.setRenameTo("enc1_\u0001\u001F.pdf");
-      representation1.addFile(representationFileEnc1);
+      addRepresentation("src/test/resources/eark", "documentation.pdf", "enc1_\u0001\u001F.pdf", representation1, null, hasPregeneratedChecksums);
     }
 
-    IPFile representationFileEnc2 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc2.setRenameTo("enc2_\u0080\u0081\u0090\u00FF.pdf");
-    representation1.addFile(representationFileEnc2);
-
-    IPFile representationFileEnc3 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc3.setRenameTo(Utils.systemIsWindows() ? "enc3_;@=&.pdf" : "enc3_;?:@=&.pdf");
-    representation1.addFile(representationFileEnc3);
-
-    IPFile representationFileEnc4 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc4
-      .setRenameTo(Utils.systemIsWindows() ? "enc4_#%{}\\^~[ ]`.pdf" : "enc4_\"<>#%{}|\\^~[ ]`.pdf");
-    representation1.addFile(representationFileEnc4);
-
-    IPFile representationFileEnc5 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFileEnc5
-      .setRenameTo(Utils.systemIsWindows() ? "enc4_#+%{}\\^~[ ]`.pdf" : "enc4_\"<>+#%{}|\\^~[ ]`.pdf");
-    representation1.addFile(representationFileEnc5);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", "enc2_\u0080\u0081\u0090\u00FF.pdf", representation1, null, hasPregeneratedChecksums);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", Utils.systemIsWindows() ? "enc3_;@=&.pdf" : "enc3_;?:@=&.pdf", representation1, null, hasPregeneratedChecksums);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", Utils.systemIsWindows() ? "enc4_#%{}\\^~[ ]`.pdf" : "enc4_\"<>#%{}|\\^~[ ]`.pdf", representation1, null, hasPregeneratedChecksums);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", Utils.systemIsWindows() ? "enc4_#+%{}\\^~[ ]`.pdf" : "enc4_\"<>+#%{}|\\^~[ ]`.pdf", representation1, null, hasPregeneratedChecksums);
 
     // 1.9.2) add a file to the representation and put it inside a folder
     // called 'abc' which has a folder inside called 'def'
-    IPFile representationFile2 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile2.setRelativeFolders(Arrays.asList("abc", "def"));
-    representation1.addFile(representationFile2);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", Utils.systemIsWindows() ? "enc4_#+%{}\\^~[ ]`.pdf" : "enc4_\"<>+#%{}|\\^~[ ]`.pdf", representation1, Arrays.asList("abc", "def"), hasPregeneratedChecksums);
 
     // 1.10) add a representation & define its status
     IPRepresentation representation2 = new IPRepresentation("representation 2");
@@ -491,13 +343,122 @@ public class EARKSIPTest {
     sip.addRepresentation(representation2);
 
     // 1.10.1) add a file to the representation
-    IPFile representationFile3 = new IPFile(Paths.get("src/test/resources/eark/documentation.pdf"));
-    representationFile3.setRenameTo("data3.pdf");
-    representation2.addFile(representationFile3);
+    addRepresentation("src/test/resources/eark", "documentation.pdf", "data3.pdf", representation2, null, hasPregeneratedChecksums);
 
     // 2) build SIP, providing an output directory
-    Path zipSIP = sip.build(tempFolder);
+    Path outputPath = sip.build(tempFolder);
 
-    return zipSIP;
+    LOGGER.info("Done creating full E-ARK SIP");
+    return outputPath;
+  }
+
+  private static void addRepresentation(String originalFilePath, String originalFilename, String filenameRename, IPRepresentation ipRepresentation, List<String> relativeFolders, boolean hasPregeneratedChecksums) throws IPException, IOException, NoSuchAlgorithmException {
+    Path representationFilePath = Paths.get(originalFilePath).resolve(originalFilename);
+
+    IPFile representationFile = new IPFile(representationFilePath);
+    representationFile.setRenameTo(filenameRename);
+
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(representationFile, representationFilePath);
+    }
+
+    if(relativeFolders != null && !relativeFolders.isEmpty()){
+      representationFile.setRelativeFolders(relativeFolders);
+    }
+
+    ipRepresentation.addFile(representationFile);
+  }
+
+  private static void addDocumentation(SIP sip, String filePath, String originalFileName, boolean hasPregeneratedChecksums) throws NoSuchAlgorithmException, IOException {
+    Path documentationFilePath = Paths.get(filePath).resolve(originalFileName);
+    IPFile documentationFile = new IPFile(documentationFilePath);
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(documentationFile, documentationFilePath);
+    }
+
+    sip.addDocumentation(documentationFile);
+  }
+
+  private static void addSchema(SIP sip, String filePath, String originalFileName, boolean hasPregeneratedChecksums) throws NoSuchAlgorithmException, IOException {
+    Path schemaFilePath = Paths.get(filePath).resolve(originalFileName);
+    IPFile schemaFile = new IPFile(schemaFilePath);
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(schemaFile, schemaFilePath);
+    }
+
+    sip.addSchema(schemaFile);
+  }
+
+  private static void addOtherMetadata(SIP sip, String originalFilePath, String originalFilename, String filenameRename, boolean hasPregeneratedChecksums) throws IPException, NoSuchAlgorithmException, IOException {
+    Path otherMetadataPath = Paths.get(originalFilePath).resolve(originalFilename);
+    IPFile metadataOtherFile = new IPFile(otherMetadataPath);
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(metadataOtherFile, otherMetadataPath);
+    }
+
+    metadataOtherFile.setRenameTo(filenameRename);
+    IPMetadata metadataOther = new IPMetadata(metadataOtherFile);
+    sip.addOtherMetadata(metadataOther);
+  }
+
+  private static void addPreservationMetadata(SIP sip, String originalFilePath, String originalFileName, boolean hasPregeneratedChecksums) throws IPException, NoSuchAlgorithmException, IOException {
+    Path premisFilePath = Paths.get(originalFilePath).resolve(originalFileName);
+    IPFile ipFile = new IPFile(premisFilePath);
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(ipFile, premisFilePath);
+    }
+
+    IPMetadata metadataPreservation = new IPMetadata(
+      ipFile
+    ).setMetadataType(MetadataTypeEnum.PREMIS);
+
+    sip.addPreservationMetadata(metadataPreservation);
+  }
+
+  private static void addDescriptiveMetadata(SIP sip, String originalFilePath, String originalFileName, boolean hasPregeneratedChecksums) throws IPException, NoSuchAlgorithmException, IOException {
+    Path descriptiveFilePath = Paths.get(originalFilePath).resolve(originalFileName);
+
+    IPFile ipFile = new IPFile(descriptiveFilePath);
+    if(hasPregeneratedChecksums){
+      generateAndSetChecksum(ipFile, descriptiveFilePath);
+    }
+
+    IPDescriptiveMetadata metadataDescriptiveDC = new IPDescriptiveMetadata(
+      ipFile,
+      new MetadataType(MetadataTypeEnum.DC), null);
+    sip.addDescriptiveMetadata(metadataDescriptiveDC);
+  }
+
+  private static IPFile generateAndSetChecksum(IPFile ipFile, Path filePath) throws NoSuchAlgorithmException, IOException {
+    String checksum = generateChecksum(filePath, CHECKSUM_MD5_ALGORITHM, 1024);
+    ipFile.setChecksum(checksum);
+    ipFile.setChecksumAlgorithm(CHECKSUM_MD5_ALGORITHM);
+
+    return ipFile;
+  }
+
+  public static String generateChecksum(Path filePath, String digestAlgorithm, Integer bufferSize) throws NoSuchAlgorithmException, IOException {
+
+    MessageDigest md = MessageDigest.getInstance(digestAlgorithm);
+    try (FileInputStream fis = new FileInputStream(filePath.toFile())) {
+      byte[] buffer = new byte[bufferSize];
+      int bytesRead;
+      while ((bytesRead = fis.read(buffer)) != -1) {
+        md.update(buffer, 0, bytesRead);
+      }
+    }
+    catch (IOException e) {
+      throw e;
+    }
+
+    return bytesToHex(md.digest());
+  }
+
+  private static String bytesToHex(byte[] bytes) {
+    StringBuilder sb = new StringBuilder();
+    for (byte b : bytes) {
+      sb.append(String.format("%02x", b));
+    }
+    return sb.toString();
   }
 }
